--- a/style.css
+++ b/style.css
@@ -12,21 +12,6 @@
 /* ==========================================================================
    Start of custom Webflow CSS
    ========================================================================== */
-.w-embed-youtubevideo {
-  width: 100%;
-  position: relative;
-  padding-bottom: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
-  background-image: url(https://d3e54v103j8qbb.cloudfront.net/static/youtube-placeholder.2b05e7d68d.svg);
-  background-size: cover;
-  background-position: 50% 50%;
-}
-
-.w-embed-youtubevideo:empty {
-  min-height: 75px;
-  padding-bottom: 56.25%;
-}
 
 .background-video {
   position: fixed;
@@ -54,56 +39,6 @@
   -ms-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
   color: #646464;
-}
-
-.portfolioa {
-  position: relative;
-  display: block;
-  width: 165px;
-  height: 36px;
-  margin: 18px 0px -18px -40px;
-  padding: 6px 0px 6px 40px;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-box-align: start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-  background-color: transparent;
-  -webkit-transform-origin: 0% 50%;
-  -ms-transform-origin: 0% 50%;
-  transform-origin: 0% 50%;
-  -webkit-transition: background-color 500ms ease, color 500ms ease, -webkit-transform 200ms ease;
-  transition: background-color 500ms ease, color 500ms ease, -webkit-transform 200ms ease;
-  transition: background-color 500ms ease, color 500ms ease, transform 200ms ease;
-  transition: background-color 500ms ease, color 500ms ease, transform 200ms ease, -webkit-transform 200ms ease;
-  font-family: Barlow, sans-serif;
-  color: hsla(0, 0%, 100%, 0.85);
-  font-size: 24px;
-  font-weight: 700;
-  letter-spacing: 0.25px;
-}
-
-.portfolioa:hover {
-  position: relative;
-  width: 165px;
-  margin-right: 0px;
-  margin-bottom: -18px;
-  margin-left: -40px;
-  padding-bottom: 6px;
-  padding-left: 40px;
-  background-color: #00ffe0;
-  color: #000;
-  font-size: 24px;
-  font-weight: 700;
-  letter-spacing: 0px;
 }
 
 .abouta {
@@ -338,7 +273,7 @@
   margin-top: -20px;
   margin-left: -120px;
   background-color: #000;
-  background-image: url("https://uploads-ssl.webflow.com/5bc3c3ab9f9d5c8b736ef412/5bc838412509791a5678fb13_mockup.2.jpg");
+  background-image: url("placeholder.jpg"); /* left 1 */
   background-position: 50% 50%;
   background-size: cover;
   box-shadow: 35px 35px 125px 0 rgba(0, 0, 0, 0.25);
@@ -546,7 +481,7 @@
   margin-top: -80px;
   margin-left: 260px;
   background-color: #000;
-  background-image: url("https://uploads-ssl.webflow.com/5bc3c3ab9f9d5c8b736ef412/5bc83874612fc8daec199b42_google%20glasse%20HD.jpg");
+  background-image: url("placeholder.jpg"); /* mid */
   background-position: 50% 50%;
   background-size: cover;
   box-shadow: 14px 14px 50px 5px rgba(0, 0, 0, 0.25);
@@ -639,7 +574,7 @@
   margin-top: 510px;
   margin-left: 640px;
   background-color: #000;
-  background-image: url("https://uploads-ssl.webflow.com/5bc3c3ab9f9d5c8b736ef412/5bc839be41fe84b31a6d23c6_mockup%201.1.jpg");
+  background-image: url("placeholder.jpg"); /* right 1 ??*/
   background-position: 50% 50%;
   background-size: cover;
   box-shadow: 18px 18px 50px 0 rgba(0, 0, 0, 0.25);
@@ -737,35 +672,6 @@
   perspective: 3000px;
   -webkit-perspective-origin: 50% 50%;
   perspective-origin: 50% 50%;
-}
-
-.div-block-5 {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  display: block;
-  width: auto;
-  height: auto;
-  background-image: url("https://uploads-ssl.webflow.com/5bc3c3ab9f9d5c8b736ef412/5c0e1e898da8f0949ffacffa_showoff.jpg");
-  background-position: 0px 50%;
-  background-size: 1280px;
-  background-repeat: no-repeat;
-}
-
-.div-block-5.walk {
-  left: 0px;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  z-index: 4;
-  display: block;
-  overflow: visible;
-  background-image: url("https://uploads-ssl.webflow.com/5bc3c3ab9f9d5c8b736ef412/5c78f574be5f9fb23d05c093_showcase-2.jpg");
-  background-position: 52% 50%;
-  background-size: cover;
-  background-attachment: fixed;
 }
 
 .section-3 {
